--- a/Lova/Views/Tests.xaml
+++ b/Lova/Views/Tests.xaml
@@ -3,12 +3,64 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:Presentation.Views"
+      xmlns:vm="clr-namespace:Presentation.ViewModels"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="Tests">
 
+    <Page.DataContext>
+        <vm:TestsViewModel/>
+    </Page.DataContext>
+    <Page.Resources>
+        <ResourceDictionary Source="Resource\Style\Test.xaml"/>
+    </Page.Resources>
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="621*"/>
+            <ColumnDefinition Width="179*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="34*"/>
+            <RowDefinition Height="55*"/>
+            <RowDefinition Height="57*"/>
+            <RowDefinition Height="127*"/>
+            <RowDefinition Height="177*"/>
+        </Grid.RowDefinitions>
+        <Label Grid.Row="0" Content="Тесты" HorizontalAlignment="Center" Width="40"/>
+        <Grid Grid.Row="1" Grid.RowSpan="4" Grid.Column="0">
+            <!--<DataGrid ItemsSource="{Binding Tests}" SelectedItem="{Binding SelectedTest}" IsSynchronizedWithCurrentItem="True">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="Название" Binding="{Binding Name}" IsReadOnly="True"/>
+                    <DataGridTextColumn Header="Описание" Binding="{Binding Description}" IsReadOnly="True"/>
+                    <DataGridTextColumn Header="Категория" Binding="{Binding Category}" IsReadOnly="True"/>
+                </DataGrid.Columns>
+            </DataGrid>-->
+            <ListView ItemsSource="{Binding Tests}" SelectedItem="{Binding SelectedTest}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <StackPanel>
+                            <Border BorderBrush="#8570E0" BorderThickness="1" Width="600">
+                                <StackPanel>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock Text="Название: " FontSize="15"/>
+                                        <TextBlock Text="{Binding Name}" FontWeight="Bold" FontSize="16"/>
+                                    </StackPanel>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock Text="Описание: " FontSize="15"/>
+                                        <TextBlock Text="{Binding Description}" FontSize="16"/>
+                                    </StackPanel>
+                                    <StackPanel Orientation="Horizontal">
+                                        <TextBlock Text="Категория: " FontSize="15"/>
+                                        <TextBlock Text="{Binding Category}" FontSize="16"/>
+                                    </StackPanel>
+                                </StackPanel>
+                            </Border>
+                        </StackPanel>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </Grid>
+        <Button Grid.Column="1" Grid.Row="2" Content="Пройти тест" Command="{Binding GoToTestCommand}"/>
+        <Button Grid.Column="1" Grid.Row="4" Content="Перейти к тестам" Command="{Binding GoToForumCommand}"/>
     </Grid>
 </Page>
