--- a/Lova/Views/ProfilView.xaml
+++ b/Lova/Views/ProfilView.xaml
@@ -4,7 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="{Binding CurrentPage}" Height="450" Width="800">
+        Title="{Binding CurrentPage}" 
+        Height="450" 
+        Width="800"
+        WindowStartupLocation="CenterScreen">
     <Window.Background >
         <SolidColorBrush Color="#3B6BBB"/>
     </Window.Background>
