--- a/Lova/App.xaml
+++ b/Lova/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="Lova.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Views/AuthenticationView.xaml"
-    xmlns:System="clr-namespace:System;assembly=System.Runtime">
+             StartupUri="Views/AuthenticationView.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -11,7 +10,6 @@
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.DeepPurple.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.Lime.xaml" />
             </ResourceDictionary.MergedDictionaries>
-            <System:Boolean x:Key="RadioButtonIsChecked1">False</System:Boolean>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
