add admin forum

--- a/Lova/Views/Resource/Style/Forum.xaml
+++ b/Lova/Views/Resource/Style/Forum.xaml
@@ -73,7 +73,7 @@
         <Setter Property="FontSize" Value="19"/>
         <Setter Property="VerticalContentAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
-        
+        <Setter Property="HorizontalContentAlignment" Value="Center"/>
     </Style>
 
    
