--- a/Lova/Views/ForumView.xaml
+++ b/Lova/Views/ForumView.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Presentation.Views.Forum"
+﻿<Page x:Class="Presentation.Views.ForumView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -11,7 +11,6 @@
     <Page.DataContext>
         <vm:ForumViewModel/>
     </Page.DataContext>
-
     <Page.Resources>
         <ResourceDictionary Source="Resource\Style\Forum.xaml"/>
     </Page.Resources>
@@ -69,7 +68,7 @@
                 </ListView.ItemTemplate>
             </ListView>
         </Grid>
-        <TextBox Grid.Column="1" Text="{Binding MessageText}" Margin="18,0,18,10" Grid.Row="1"/>
+        <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding MessageText}" Margin="18,0,18,10" />
         <Button Grid.Column="1" Grid.Row="2" Command="{Binding SendMessageCommand}" Content="Отправить сообщение"/>
         <Image Grid.Row="3" Grid.Column="1" Source="Resource\Image\NewPage.png">
             <Image.ToolTip >
@@ -77,5 +76,6 @@
             </Image.ToolTip>
         </Image>
         <Button Grid.Column="1" Grid.Row="4" Content="Перейти к тестам" Command="{Binding GoToTestCommand}"/>
+        <Button Grid.Column="1" Grid.Row="4" Content="Добавить обсуждение" VerticalAlignment="Top" Command="{Binding GoToAdminCommand}"/>
     </Grid>
 </Page>
