--- a/Lova/Views/UserTestView.xaml
+++ b/Lova/Views/UserTestView.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Presentation.Views.UserTest"
+﻿<Page x:Class="Presentation.Views.UserTestView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
