--- a/Lova/Forum/RemoveMessageView.xaml
+++ b/Lova/Forum/RemoveMessageView.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Presentation.Views.RemoveDiscussionView"
+﻿<Page x:Class="Presentation.Views.RemoveMessageView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
