--- a/Lova/Tests/CurrentTestView.xaml
+++ b/Lova/Tests/CurrentTestView.xaml
@@ -18,7 +18,8 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="38*"/>
-            <RowDefinition Height="263*"/>
+            <RowDefinition Height="245*"/>
+            <RowDefinition Height="15*"/>
             <RowDefinition Height="149*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
@@ -40,24 +41,24 @@
                 </TreeViewItem>
             </TreeViewItem>
         </TreeView>
+        <StackPanel Grid.Row="2" Grid.Column="0" Orientation="Horizontal" >
+
+        </StackPanel>
 
         <ListView Grid.Row="1" Grid.Column="0" ItemsSource="{Binding Questions}" SelectedItem="{Binding SelectedQuestion}">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <Border BorderBrush="#8570E0" BorderThickness="2" Padding="10">
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock Text="►"/>
-                            <TextBlock FontSize="18" Text="{Binding Description}"/>
-                        </StackPanel>
+                    <Border BorderBrush="#8570E0" BorderThickness="2" Padding="10" Width="550">
+                        <TextBlock FontSize="18" Text="{Binding Description}" TextWrapping="Wrap"/>
                     </Border>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
 
-        <TextBox Grid.Column="0" Grid.Row="2" Width="400" Height="50" VerticalAlignment="Top" Text="{Binding Answer, Mode=TwoWay}"/>
-        <Button Grid.Column="0" Grid.Row="2" HorizontalAlignment="Right" Height="50" Width="150" VerticalAlignment="Top"  Command="{Binding SaveAnswerCommand}" Content="Сохранить ответ"/>
-        <Button Grid.Column="0" Grid.Row="2" Width="300" Height="60" HorizontalAlignment="Left" Command="{Binding CheckTestCommand}"  Content="Проверить тест" VerticalAlignment="Top" Margin="140,69,0,0"/>
-        <Button Grid.Column="1" Grid.Row="2" Content="Форум" Command="{Binding GoToForumCommand}" Margin="0,75,0,0" VerticalAlignment="Top" Height="40" Width="170"/>
-        <Button Grid.Column="1" Grid.Row="2" Content="Тесты" Command="{Binding GoToTestCommand}" Margin="0,11,0,0" VerticalAlignment="Top" Height="40" Width="170"/>
+        <TextBox Grid.Column="0" Grid.Row="3" Width="400" Height="50" VerticalAlignment="Top" Text="{Binding Answer, Mode=TwoWay}"/>
+        <Button Grid.Column="0" Grid.Row="3" HorizontalAlignment="Right" Height="50" Width="150" VerticalAlignment="Top"  Command="{Binding SaveAnswerCommand}" Content="Сохранить ответ"/>
+        <Button Grid.Column="0" Grid.Row="3" Width="300" Height="60" HorizontalAlignment="Left" Command="{Binding CheckTestCommand}"  Content="Проверить тест" VerticalAlignment="Top" Margin="140,69,0,0"/>
+        <Button Grid.Column="1" Grid.Row="3" Content="Форум" Command="{Binding GoToForumCommand}" Margin="0,75,0,0" VerticalAlignment="Top" Height="40" Width="170"/>
+        <Button Grid.Column="1" Grid.Row="3" Content="Тесты" Command="{Binding GoToTestCommand}" Margin="0,11,0,0" VerticalAlignment="Top" Height="40" Width="170"/>
     </Grid>
 </Page>
