--- a/Lova/Tests/RemoveTestView.xaml
+++ b/Lova/Tests/RemoveTestView.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Presentation.Views.RemoveMessageView"
+﻿<Page x:Class="Presentation.Views.RemoveTestView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -28,25 +28,26 @@
             <RowDefinition Height="187*"/>
         </Grid.RowDefinitions>
 
-        <ListView Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Grid.RowSpan="2" ItemsSource="{Binding Discussions}" SelectedItem="{Binding SelectedDiscussion}">
+        <ListView Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" Grid.RowSpan="2" ItemsSource="{Binding Tests}" SelectedItem="{Binding SelectedTest}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <StackPanel>
                         <Border BorderBrush="#8570E0" BorderThickness="1" Width="505">
                             <StackPanel>
-                                <TextBlock Text="{Binding DiscussionName}" FontWeight="Bold" FontSize="16" HorizontalAlignment="Center" />
-                                <TextBlock Text="{Binding Text}" FontSize="14" TextWrapping="Wrap"/>
+                                <TextBlock Text="{Binding Name}" FontWeight="Bold" FontSize="16" HorizontalAlignment="Center" />
+                                <TextBlock Text="{Binding Description}" FontSize="14" TextWrapping="Wrap"/>
+                                <TextBlock Text="{Binding Category}" FontSize="14" TextWrapping="Wrap"/>
                             </StackPanel>
                         </Border>
                     </StackPanel>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
-        <Label Grid.Row="0" Grid.ColumnSpan="3" Content="Обсуждение" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
+        <Label Grid.Row="0" Grid.ColumnSpan="3" Content="Тест"/>
         <Image Grid.Column="2" Grid.Row="1" Source="..\Views\Resource\Image\Remove.png"/>
-        <Button Grid.Row="3" Grid.ColumnSpan="2" Content="Удалить обсуждение" Width="254" Height="51" Command="{Binding RemoveDiscussionCommand}"/>
+        <Button Grid.Row="3" Grid.ColumnSpan="2" Content="Удалить тест" Width="254" Height="51" Command="{Binding RemoveTestCommand}"/>
         <Button Grid.Column="2" Grid.Row="3" Content="Тесты" Command="{Binding GoToTestCommand}" Margin="0,100,0,0" VerticalAlignment="Top" Height="40" Width="170"/>
         <Button Grid.Column="2" Grid.Row="3" Content="Форум" Command="{Binding GoToForumCommand}" Margin="0,24,0,0" VerticalAlignment="Top" Height="40" Width="170"/>
-        <Button Grid.Column="2" Grid.Row="2" Content="Добавить обсуждение" Command="{Binding AddDiscussionCommand}" Margin="0,24,0,0" VerticalAlignment="Top" Height="40" Width="170"/>
+        <Button Grid.Column="2" Grid.Row="2" Content="Добавить тест" Command="{Binding AddTestCommand}" Margin="0,24,0,0" VerticalAlignment="Top" Height="40" Width="170"/>
     </Grid>
 </Page>
