--- a/Lova/App.xaml
+++ b/Lova/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="Lova.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Views/AuthenticationView.xaml">
+             StartupUri="Views/ProfilView.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
