--- a/Lova/Views/RegistrationView.xaml
+++ b/Lova/Views/RegistrationView.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Presentation.Views.RegistrationView"
+﻿<Page x:Class="Presentation.Views.RegistrationView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -7,14 +7,14 @@
         xmlns:vm="clr-namespace:Presentation.ViewModels"
         mc:Ignorable="d" 
         Title="Registration" 
-        Width="410" Height="360" WindowStartupLocation="CenterScreen" Background="#3B6BBB">
+        Width="500" Height="500">
 
-    <Window.DataContext>
+    <Page.DataContext>
         <vm:RegistrationViewModel/>
-    </Window.DataContext>
-    <Window.Resources>
+    </Page.DataContext>
+    <Page.Resources>
         <ResourceDictionary Source="Resource\Style\StartWindow.xaml"/>
-    </Window.Resources>
+    </Page.Resources>
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -23,25 +23,26 @@
             <ColumnDefinition Width="93*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="120*"/>
-            <RowDefinition Height="55*"/>
-            <RowDefinition Height="55*"/>
-            <RowDefinition Height="55*"/>
-            <RowDefinition Height="116*"/>
+            <RowDefinition Height="149*"/>
+            <RowDefinition Height="68*"/>
+            <RowDefinition Height="68*"/>
+            <RowDefinition Height="68*"/>
+            <RowDefinition Height="78*"/>
+            <RowDefinition Height="68*"/>
         </Grid.RowDefinitions>
-        <Image Grid.Column="1" Grid.Row="0" Source="{Binding Img}" HorizontalAlignment="Center"/>
+        
+        <Image Grid.Column="1" Grid.Row="0" Source="{Binding Img}"/>
         <Image Grid.Column="0" Grid.Row="1" Source="Resource/Icons/Login.ico" Margin="53,13,7,10">
             <Image.ToolTip>
-                <ToolTip Placement="Bottom">Логин должен содержать больше 4 символов</ToolTip>
+                <ToolTip Placement="Left">Логин должен содержать больше 4 символов</ToolTip>
             </Image.ToolTip>
         </Image>
         <Image Grid.Column="0" Grid.Row="2" Source="Resource/Icons/Password.ico" Margin="53,13,7,10">
             <Image.ToolTip>
-                <ToolTip Placement="Bottom" Content="Пароль должен содержать не менее 6 символов"/>
+                <ToolTip Placement="Left" Content="Пароль должен содержать не менее 6 символов"/>
             </Image.ToolTip>
         </Image>
-        <Image Grid.Column="1" Grid.Row="0" Source="Resource/Image/User.png" HorizontalAlignment="Center"/>
-        <TextBox Grid.Row="1" Grid.Column="1" materialDesign:HintAssist.Hint="Логин" Style="{StaticResource MaterialDesignFloatingHintTextBox}" TextWrapping="NoWrap" FontSize="18" FontWeight="Bold" VerticalAlignment="Top" CaretBrush="#FF2CB4A2">
+        <TextBox Grid.Row="1" Grid.Column="1" materialDesign:HintAssist.Hint="Логин" Style="{StaticResource MaterialDesignFloatingHintTextBox}" Height="45" TextWrapping="Wrap" FontSize="18" FontWeight="Bold" CaretBrush="#FF2CB4A2">
             <TextBox.Text>
                 <Binding Path="UserName" UpdateSourceTrigger="PropertyChanged" ValidatesOnDataErrors="True">
                     <Binding.ValidationRules >
@@ -50,8 +51,11 @@
                 </Binding>
             </TextBox.Text>
         </TextBox>
-        <PasswordBox Grid.Column="1" Grid.Row="2" materialDesign:HintAssist.Hint="Пароль" PasswordChanged="password_PasswordChanged" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" FontSize="18" FontWeight="Bold" VerticalAlignment="Top" CaretBrush="#FF2CB4A2"/>
-        <PasswordBox Grid.Column="1" Grid.Row="3" materialDesign:HintAssist.Hint="Повторите пароль" PasswordChanged="confirmedPassword_PasswordChanged" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" FontSize="18" FontWeight="Bold" VerticalAlignment="Top" CaretBrush="#FF2CB4A2"/>
+        <PasswordBox Grid.Column="1" Grid.Row="2" materialDesign:HintAssist.Hint="Пароль" PasswordChanged="password_PasswordChanged" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" FontSize="18" FontWeight="Bold" CaretBrush="#FF2CB4A2"/>
+        <PasswordBox Grid.Column="1" Grid.Row="3" materialDesign:HintAssist.Hint="Повторите пароль" PasswordChanged="confirmedPassword_PasswordChanged" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}" FontSize="18" FontWeight="Bold" CaretBrush="#FF2CB4A2"/>
         <Button Grid.Column="1" Grid.Row="4" Content="Зарегистрироваться" Command="{Binding SignUpCommand}"/>
+        <TextBlock Grid.Row="5" Grid.Column="1" VerticalAlignment="Top">
+            Есть аккаунт? <Hyperlink Command="{Binding GoToLoginCommand}" Foreground="#FF020A11" FontWeight="Bold">Авторизация</Hyperlink>
+        </TextBlock>
     </Grid>
-</Window>
+</Page>
