--- a/Lova/Forum/AddDiscussionView.xaml
+++ b/Lova/Forum/AddDiscussionView.xaml
@@ -34,9 +34,10 @@
         <TextBlock Grid.Row="2" Grid.Column="0" Text="Текст:" FontSize="18" VerticalAlignment="Center" HorizontalAlignment="Center"/>
         <TextBox Grid.Row="2" Grid.Column="1" Margin="0,50,0,0" Text="{Binding DiscussionText, Mode=TwoWay}"/>
         <Button Grid.Row="3" Grid.ColumnSpan="2" Content="Добавить обсуждение" Width="254" Height="51" Command="{Binding AddDiscussionCommand}"/>
-        <Button Grid.Column="2" Grid.Row="3" Content="Тесты" Command="{Binding GoToTestCommand}" Margin="0,100,0,0" VerticalAlignment="Top"/>
-        <Button Grid.Column="2" Grid.Row="3" Content="Форум" Command="{Binding GoToForumCommand}" Margin="0,24,0,0" VerticalAlignment="Top"/>
+        <Button Grid.Column="2" Grid.Row="3" Content="Тесты" Command="{Binding GoToTestCommand}" Margin="0,122,0,0" VerticalAlignment="Top"/>
+        <Button Grid.Column="2" Grid.Row="3" Content="Форум" Command="{Binding GoToForumCommand}" Margin="0,58,0,0" VerticalAlignment="Top" />
         <Button Grid.Column="2" Grid.Row="2" Content="Удалить обсуждение" Command="{Binding RemoveDiscussionCommand}" VerticalAlignment="Center"/>
+        <Button Grid.Column="2" Grid.Row="2" Content="Удалить сообщение" VerticalAlignment="Top" Margin="0,115,0,0" Grid.RowSpan="2" Command="{Binding RemoveMessageCommand}"/>
         <Image Grid.Column="2" Grid.RowSpan="3" Source="..\Views\Resource\Image\Add.png" Margin="15,16,31,94"/>
     </Grid>
 </Page>
